--- a/index.html
+++ b/index.html
@@ -6,13 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet vue WIS</title>
 </head>
+
+
     <body>
+        <img src="https://upload.wikimedia.org/wikipedia/fr/thumb/8/88/Nantes_logo.svg/2560px-Nantes_logo.svg.png" alt="Logo de la ville de Nantes" width="200px" height="auto">
+
         <div id="myapp">
-            <div v-if="records.length > 0" v-for="evt in records">{{evt.fields.lieu}}</div>  
+
+            <h3 class="text-center">Retrouvez les événements de la ville de Nantes !</h3>
+            <div class="m-3">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div v-if="records.length > 0" v-for="evt in records">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{evt.fields.emetteur}}</h5>
+                                    <p class="card-text" >{{couperdescription(evt.fields.description)}}</p>
+                                    <a href="#" class="btn btn-primary ">Réserver</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+                
+
+
         </div>
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://unpkg.com/vue@3"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <script>
             const apiURL = "https://data.nantesmetropole.fr/api/records/1.0/search/?dataset=244400404_agenda-evenements-nantes-nantes-metropole&q=&facet=emetteur&facet=rubrique&facet=lieu&facet=ville&facet=lieu_quartier"
             const myappdata = {
@@ -41,6 +66,10 @@
                         .catch((error)=>{
                             console.log(error)
                         })
+                    },
+                    couperdescription(texte){
+                        return texte.slice(0,120)
+                       // if texte lenght supérieur à 120 afficher trois points 
                     }
                 },
                 mounted(){
