--- a/index.html
+++ b/index.html
@@ -13,24 +13,59 @@
 
         <div id="myapp">
 
-            <h3 class="text-center">Retrouvez les événements de la ville de Nantes !</h3>
-            <div class="m-3">
-                <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div v-if="records.length > 0" v-for="evt in records">
-                        <div class="col">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{evt.fields.emetteur}}</h5>
-                                    <p class="card-text" >{{couperdescription(evt.fields.description)}}</p>
-                                    <a href="#" class="btn btn-primary ">Réserver</a>
-                                </div>
+
+            <h3 class="text-center mb-4">Retrouvez les événements de la ville de Nantes et ses alentours !</h3>
+
+            <div v-if="facet_groups.length > 0" v-for="x in facet_groups">
+                <div v-if="x.name == 'emetteur'">
+                    <div v-if="x.facets.length > 0" v-for="y in x.facets">
+                        <h4 class="ms-3">{{y.name}}</h4>
+                        <div>
+                            <div class="m-3">
+                                <div class="row row-cols-1 row-cols-md-3 g-4">
+                                    <div v-if="records.length > 0" v-for="evt in records">
+                                        <div v-if="y.name == evt.fields.emetteur">
+                                            <div class="col">
+                                                <div class="card">
+                                                    <p class="card-header">{{evt.fields.date}}</p>
+                                                    <div class="card-body">
+                                                        <h5 class="card-title">{{evt.fields.lieu}}</h5>
+                                                        <p class="card-subtitle mb-2 text-muted">{{evt.fields.type}}</p>
+                                                        <p class="card-text" >{{couperdescription(evt.fields.description)}}</p>
+                                                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Plus d'infos</button>
+                                                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                                            <div class="modal-dialog modal-dialog-scrollable">
+                                                                <div class="modal-content">
+                                                                    <div class="modal-header">
+                                                                        <h1 class="modal-title fs-5" id="staticBackdropLabel">{{evt.fields.lieu}}</h1>
+                                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                                    </div>
+                                                                    <div class="modal-body">
+                                                                        <p class="text-muted">Type: {{evt.fields.type}}</p>
+                                                                        <p>Date et horaires: {{evt.fields.date}} - {{evt.fields.heure_debut}}</p>
+                                                                        <p>Adresse: {{evt.fields.adresse}} - {{evt.fields.ville}} {{evt.fields.code_postal}}</p>
+                                                                        <p>Description: {{evt.fields.description}}</p>
+                                                                        <p>Tarifs: {{evt.fields.precisions_tarifs}}</p>
+                                                                    </div>
+                                                                    <div class="modal-footer">
+                                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                                                                        <button type="button" class="btn btn-primary disabled">Réserver</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> 
                             </div>
                         </div>
-                    </div>
-                </div>  
-            </div>
-                
 
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -45,7 +80,9 @@
                     return {
                         responsedata: {},
                         records: [],
-                        fields: {}
+                        facet_groups: [],
+                        fields: {},
+                        facets: []
                     }
                 }, 
                 methods : {
@@ -55,7 +92,8 @@
                             console.log(response)
                             this.responsedata = response.data
                             this.records = response.data.records
-                            
+                            this.facet_groups = response.data.facet_groups
+
                             //for(field in this.fields){
                             //    console.log("ok")
                             //    field = records.field
@@ -68,9 +106,15 @@
                         })
                     },
                     couperdescription(texte){
-                        return texte.slice(0,120)
-                       // if texte lenght supérieur à 120 afficher trois points 
+                        if(texte.length > 120){
+                            return texte.slice(0,120) + "..."
+                        }else{
+                            return texte.slice(0,120)
+                        }
                     }
+                    //formatdate(date){
+                    //    return date ?? ('MM/DD/YYYY');
+                    //}
                 },
                 mounted(){
                     this.fetchApi()
